# beaglebone

./: .gitmodules
common/protos/: CMakeLists.txt  telemetry_service.proto
cpp/: README
cpp/LinuxConsoleApplicationMake/: Makefile  rc_project_template
cpp/ahrs/: .gitignore  CMakeLists.txt  MadgwickAHRS.c  MadgwickAHRS.h
cpp/qpcpp/examples/posix/blinky/: CMakeLists.txt  blinky.cpp  bsp.cpp
cpp/qpcpp/examples/posix/dpp/: README  vs_dpp.sln
cpp/qpcpp/examples/posix/dpp/vs_dpp/: vs_dpp.vcxproj
cpp/qpcpp/examples/posix/imu/: .gitignore  Attitude.h  CMakeLists.txt  CircularBuffer.h  TelemetryServiceImpl.cpp  TelemetryServiceImpl.h  TelemetryTestService.cpp  active_objects.cpp  active_objects.h  bsp.cpp  bsp.h  imu.qm  main.cpp  qp_plugs.cpp
cpp/qpcpp/examples/posix/imu/TelemetryServieClient/: build.sh  streaming_client.py  telemetry_service_pb2.py  telemetry_service_pb2_grpc.py
cpp/qpcpp/examples/posix/imu/vs_imu/: vs_imu.sln  vs_imu.vcxproj  vs_imu.vcxproj.filters
overlays/: BB-PWM-OVERLAY-00A0.dts
scratch/: .gitignore  gpsd_client.py
scratch/gps/: gpsd_client.py  gpsloc.py
scratch/gps/examples/: etc.default.gpsd.example  systemd.gpsd.config.example
scratch/tools/: findsym.sh
scratch/video/: README  fswebcam.conf
scratch/video/grabber/: Makefile  v4l2grab  v4l2grab.c
utilities/linux/: .short.pwd.sh  .smart.bash.prompt.py  README  test.sh
